# photometric-viewer

./: .gitignore  LICENSE.txt  Makefile  README.md  flatpak.yaml  pyproject.toml  requirements.txt  run.py  setup.py  snapcraft.yaml  update-translations.sh
.github/workflows/: build.yml
data/: info.dalee.photometric-viewer.metainfo.xml  io.github.dlippok.photometric-viewer.gschema.xml  io.github.dlippok.photometric-viewer.metainfo.xml
data/desktop/: info.dalee.photometric-viewer.desktop  info.dalee.photometric-viewer.mime.xml  io.github.dlippok.photometric-viewer.desktop  io.github.dlippok.photometric-viewer.mime.xml
data/snap/: snapcraft.yaml
data/translations/: io.github.dlippok.photometric-viewer.pot  pt_BR.po
deploy/snap/: snapcraft.yaml
docs/: index.md
docs/photometrics/: dummy.ies  dummy.ldt
photometric_viewer/: accelerators.py  main.py
photometric_viewer/assets/: style-hc.css  style.css
photometric_viewer/config/: accelerators.py  appearance.py  plotter_themes.py
photometric_viewer/formats/: common.py  csv.py  exceptions.py  format_json.py  ies.py  json.py  ldt.py  png.py  svg.py
photometric_viewer/gui/: about.py  content.py  diagram.py  empty.py  general.py  geometry.py  lamps.py  menu.py  photometry.py  properties.py  values.py  vtable.py  window.py
photometric_viewer/gui/dialogs/: about.py  file_chooser.py  (+1 more)
photometric_viewer/model/: luminaire.py  photometry.py  room_properties.py  settings.py  units.py  zones.py
photometric_viewer/styles/: style.css
photometric_viewer/utils/: GSettings.py  calc.py  conversion.py  coordinates.py  gio.py  io.py  ioutil.py  locales.py  plotter_themes.py  plotters.py  project.py  urls.py
src/: main.py  style.css
src/formats/: ies.py
src/gui/: content.py  diagram.py  header.py  properties.py  window.py
src/model/: photometry.py
src/utils/: plotters.py
tests/: dummy_test.py
tests/fixtures/: photometry.py
tests/formats/: format_json.py  ies.py  json.py  ldt.py
tests/utils/: calc.py  coordinates.py  ioutil.py
(+118 files in other folders)
