[build-system]
requires = ["setuptools ~= 58.0", "cython ~= 0.29.0"]

[project]
name='photometric-viewer'
version = "2.1.3"
description="Browse content of IES and LDT photometric files"
authors = [
    {name = "Damian Lippok", email = "mail.dalee@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE.txt"}

requires-python = ">= 3.10"

[project.urls]
Homepage="https://github.com/dlippok/photometric-viewer"
Issues="https://github.com/dlippok/photometric-viewer/issues"
Support="https://github.com/dlippok/photometric-viewer/discussions/categories/q-a"

[tool.setuptools.packages.find]
where = ["photometric_viewer"]


[tool.setuptools.package-data]
photometric_viewer=[
    'assets/style.css',
    'assets/language-specs/ies.lang',
    'assets/language-specs/ldt.lang'
]

[tool.setuptools.data]


[project.entry-points]
console_scripts = "photometric-viewer=photometric_viewer.main:run"

      data_files=[
          ('share/icons/hicolor/scalable/apps', ['data/icons/io.github.dlippok.photometric-viewer.svg']),
          ('share/icons/hicolor/symbolic/apps', ['data/icons/io.github.dlippok.photometric-viewer-symbolic.svg']),
          ('share/locale/de/LC_MESSAGES', ['build/translations/de/LC_MESSAGES/io.github.dlippok.photometric-viewer.mo']),
          ('share/locale/pl/LC_MESSAGES', ['build/translations/pl/LC_MESSAGES/io.github.dlippok.photometric-viewer.mo']),
          ('share/icons/hicolor/symbolic/apps', ['data/icons/io.github.dlippok.photometric-viewer-symbolic.svg']),
          ('share/applications', ['data/desktop/io.github.dlippok.photometric-viewer.desktop']),
          ('share/mime/packages', ['data/desktop/io.github.dlippok.photometric-viewer.mime.xml']),
          ('share/metainfo', ['data/io.github.dlippok.photometric-viewer.metainfo.xml']),
          ('share/glib-2.0/schemas', ['data/io.github.dlippok.photometric-viewer.gschema.xml', 'build/gschemas.compiled'])
      ]
)
